# portfolio_tracker

./: .gitignore
backend/: db.py  main.py  price_cache.json  process_data.py  pyproject.toml  stock_service.py  ticker_cache.json  ticker_service.py  usd_to_eur_cache.json
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/pages/: landing.js
