[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["arseniyy123 <arseniyy1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.1"
aiohttp = "^3.10.10"
fastapi = "^0.115.4"
yfinance = "^0.2.48"
yahooquery = "^2.2.15"
uvicorn = "^0.32.0"
python-multipart = "^0.0.17"
pip = "^24.3.1"
nest-asyncio = "^1.6.0"
holidays = "^0.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
